<resources>
    <string name="app_name">HD Nature Wallpaper</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="search">Search</string>
    <string name="close_nav">Close navigation</string>
    <string name="open_nav">Open Navigation</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="exists_file_msg">This image is already download, do you want to download it again?</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="more_apps">More apps</string>

    <string name="my_gmail">nourdroidsoft@gmail.com</string>
    <string name="retry_tv">Retry</string>
    <string name="wallpaper_act_interstitial_ad">ca-app-pub-4493428815220305/5781802889</string>
    <string name="category_acti_banner_ad">ca-app-pub-4493428815220305/3916883415</string>
    <string name="home_frag_banner_ad">ca-app-pub-4493428815220305/5565044999</string>

</resources>